# sentinel-sn

./: .DockerFile  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  MANIFEST.in  README  README.md  pyproject.toml  setup.py  usage.md
benchmark/: box.py  drain.py  feeder.py  monitoring.py  run.sh
dev/: dumper.py  feeder.py  in_only.py  in_out.py  out_only.py  run.sh
docs/: Makefile  conf.py  index.rst  non_abstract_boxes.rst  snbox.rst
example_sn_box/: in_multiple_out.py  in_only.py  out_only.py  run.sh
examples/: client.py  client2.py  run_example.sh
examples/SN/: README.md  client.py  client2.py  server.py
examples/SNBox/: README.md  in_multiple_out.py  in_only.py  in_out.py  out_only.py
examples/SNBox_monitoring/: README.md  box.py  drain.py  feeder.py  monitoring.py
examples/sn_box/: in_multiple_out.py  in_only.py  in_out.py  out_only.py
examples/sn_box_monitoring/: box.py  drain.py  feeder.py  monitoring.py  run.sh
examples/sn_raw/: client.py  client2.py  server.py
sn/: __init__.py  argparser.py  exceptions.py  logging.py  messages.py  monitoring.py  msgloop.py  network.py
tests/: client.py  client2.py  conftest.py  fixtures.py  run_example.sh  server.py  test_functional.py  test_integration.py
tests/argparser/: conftest.py  fixtures.py  test_args.py
tests/messages/: conftest.py  fixtures.py  test_encode.py  test_parse.py
tests/monitoring/: conftest.py  test_backends.py  test_metrics.py  test_monitoring.py
tests/msgloop/: conftest.py  test_errors.py  test_msgloop.py  test_setup_errors.py
tests/network/: conftest.py  test_communication.py
turris_sentinel_network/: __init__.py  argparser.py  exceptions.py  logging.py  messages.py  monitoring.py  msgloop.py  network.py
turris_sentinel_template_box/: __main__.py  template_box.py
