[build-system]
requires = ["poetry-core>=1.2.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "turris_sentinel_template_box"
version = "0.1.0"
description = "Python template project for Turris Sentinel"
authors = ["Turris Software <software@turris.cz>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://gitlab.nic.cz/turris/sentinel/sentinel-python-project-template"
include = ["CHANGELOG.md"]
packages = [{include = "turris_sentinel_template_box"}]

[tool.poetry.scripts]
template_box = "turris_sentinel_template_box.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
# defining package source explicitly should fasten dependency resolution
sn = {version = "0.3.1", source = "sentinel-pkg-registry-download"}

[tool.poetry.group.dev.dependencies]
black = "22.8.0"
isort = "5.10.1"
flake8-pyproject = ">=1.1.0.post0"
mypy = ">=0.982"

[tool.poetry.group.test.dependencies]
pytest = ">=7.1.3"
pytest-cov = ">=4.0.0"

# This is repository for a download/dependency installation only 
[[tool.poetry.source]]
name = "sentinel-pkg-registry-download"
url = "https://gitlab.nic.cz/api/v4/projects/1260/packages/pypi/simple"
default = false
secondary = false

# This is repository for a package publishing only
[[tool.poetry.source]]
name = "sentinel-pkg-registry-publish"
url = "https://gitlab.nic.cz/api/v4/projects/1260/packages/pypi"
default = false
secondary = false

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203"]

[[tool.mypy.overrides]]
module = "sn"
ignore_missing_imports = true
