[build-system]
requires = ["poetry-core>=1.2.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "turris_sentinel_network"
version = "0.3.1"
description = "Core Turris Sentinel server infrastructure library"
authors = ["Turris Software <software@turris.cz>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://gitlab.nic.cz/turris/sentinel/sn"
include = ["CHANGELOG.md"]
packages = [{include = "turris_sentinel_network"}]

[tool.poetry.dependencies]
python = "^3.8"
pyzmq = "^24.0.1"
msgpack = "^1.0.4"

[tool.poetry.group.dev.dependencies]
black = "22.10.0"
isort = "5.10.1"
Flake8-pyproject = "^1.2.1"
mypy = "^0.991"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

# This is repository for a package publishing only
[[tool.poetry.source]]
name = "sentinel-pkg-registry-publish"
url = "https://gitlab.nic.cz/api/v4/projects/1260/packages/pypi"
default = false
secondary = false

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203"]

[[tool.mypy.overrides]]
module = "msgpack"
ignore_missing_imports = true
